--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 body {
   background-color: #f9f7fe;
+  font-family: "Roboto", serif;
 }
+
 .weather.app {
   background: white;
   max-width: 600px;
