--- a/src/style.css
+++ b/src/style.css
@@ -12,4 +12,19 @@ body {
   border-radius: 16px;
 }
 .search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  padding: 15px 20px;
+  font-size: 16px;
+}
+.search-form-button {
+  background: #885df1;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 6px;
+  margin-left: 5px;
+  color: white;
+  font-size: 16px;
 }
