--- a/src/style.css
+++ b/src/style.css
@@ -64,3 +64,19 @@ main {
 .weather-app-details strong {
   color: #f65282;
 }
+.weather-app-temperature-container {
+  display: flex;
+}
+.weather-app-temperature-value {
+  font-size: 88px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+.weather-app-temperature-icon {
+  font-size: 44px;
+  margin-top: 22px;
+}
+.weather-app-temperature-unit {
+  margin-top: 16px;
+  font: size 28px;
+}
