--- a/src/style.css
+++ b/src/style.css
@@ -70,13 +70,13 @@ main {
 .weather-app-temperature-value {
   font-size: 88px;
   font-weight: bold;
-  margin-left: 10px;
+  line-height: 88px;
 }
-.weather-app-temperature-icon {
-  font-size: 44px;
-  margin-top: 22px;
+.weather-app-icon {
+  width: 88px;
+  height: 88px;
 }
 .weather-app-temperature-unit {
-  margin-top: 16px;
+  margin-top: 6px;
   font: size 28px;
 }
