--- a/src/style.css
+++ b/src/style.css
@@ -101,7 +101,7 @@ main {
 .weather-forecast-temperature {
   padding: 0 10px;
 }
-.weather.forecast {
+.weather-forecast {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
